--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "nickgnd",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "underscore": "^1.8.3"
   }
 }
